[package]
name = "mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
switchboard = { path = "../switchboard" }
text-core.workspace = true
thiserror.workspace = true
uniffi.workspace = true
